# weather-in-exel

./: .gitignore  Makefile  README.md  pyproject.toml
src/: analysis.py  config.py  database.py  excel_report.py  main.py  weather_api.py
